--- a/docs/docs/essentials/components.mdx
+++ b/docs/docs/essentials/components.mdx
@@ -137,7 +137,7 @@ class Component extends LeafComponent {
   render() {
     // ...
     // highlight-next-line
-    const detailsElement = createElement('details', detailsProps, detailsContent);
+    const detailsElement = createElement('details', detailsContent, detailsProps);
   }
 }
 ```
